phone image container modify // add button and interacting

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
@@ -18,7 +23,7 @@
     <main class="main-contents">
       <div class="image-container">
         <div class="division-60">
-          <div>
+          <div class="division-60-contents">
             <h1>
               Lorem Ipsum is <br />
               simply dummy text
@@ -46,10 +51,17 @@
               Vero iste in sed distinctio eos ipsa error impedit eaque alias?
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
             </p>
-            <button class="learn-button">LEARN MORE</button>
+            <button class="learn-button specific-button">LEARN MORE</button>
+          </div>
+          <div class="circle-button-list">
+            <div class="circle-button__item gray-button"></div>
+            <div class="circle-button__item white-button"></div>
+            <div class="circle-button__item gold-button"></div>
           </div>
         </div>
-        <div class="division-40"></div>
+        <div class="division-40">
+          <img class="main-phone-image" src="/asset/phone1-1.png" alt="" />
+        </div>
       </div>
       <div class="part-container">
         <div class="for-line"></div>
@@ -139,5 +151,6 @@
         </div>
       </div>
     </main>
+    <script src="./main.js"></script>
   </body>
 </html>
