--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="backdrop"></div>
+    <div class="side-menu">
+      <ul class="side-menu__list">
+        <li class="side-menu__item"><a href="#part-one">Part 01</a></li>
+        <li class="side-menu__item"><a href="#part-two">Part 02</a></li>
+        <li class="side-menu__item"><a href="#part-three">Part 03</a></li>
+        <li class="side-menu__item"><a href="#part-four">Part 04</a></li>
+      </ul>
+    </div>
     <header class="main-header">
       <h3 class="logo">Lorem Ipsum</h3>
       <div class="hamberger">
@@ -63,7 +72,7 @@
           <img class="main-phone-image" src="/asset/phone1-1.png" alt="" />
         </div>
       </div>
-      <div class="part-container">
+      <div class="part-container" id="part-one">
         <div class="for-line"></div>
         <div class="part">PART 1</div>
         <div class="for-line"></div>
@@ -90,7 +99,7 @@
           </div>
         </div>
       </div>
-      <div class="part-container">
+      <div class="part-container" id="part-two">
         <div class="for-line"></div>
         <div class="part">PART 2</div>
         <div class="for-line"></div>
@@ -100,7 +109,7 @@
         <img src="./image/phone-item-2.jpg" alt="" />
         <img src="./image/phone-item-2.jpg" alt="" />
       </div>
-      <div class="part-container">
+      <div class="part-container" id="part-three">
         <div class="for-line"></div>
         <div class="part">PART 3</div>
         <div class="for-line"></div>
@@ -122,7 +131,7 @@
           <button class="view-more-button">View more</button>
         </div>
       </div>
-      <div class="part-container">
+      <div class="part-container" id="part-four">
         <div class="for-line"></div>
         <div class="part">PART 4</div>
         <div class="for-line"></div>
