--- a/index.html
+++ b/index.html
@@ -105,9 +105,18 @@
         <div class="for-line"></div>
       </div>
       <div class="part-two-image-container">
-        <img src="./image/phone-item-2.jpg" alt="" />
-        <img src="./image/phone-item-2.jpg" alt="" />
-        <img src="./image/phone-item-2.jpg" alt="" />
+        <div class="part-two-image1 part-two">
+          <div class="hover-backdrop"></div>
+          <div class="learn-more-hover">Learn more</div>
+        </div>
+        <div class="part-two-image2 part-two">
+          <div class="hover-backdrop"></div>
+          <div class="learn-more-hover">Learn more</div>
+        </div>
+        <div class="part-two-image3 part-two">
+          <div class="hover-backdrop"></div>
+          <div class="learn-more-hover">Learn more</div>
+        </div>
       </div>
       <div class="part-container" id="part-three">
         <div class="for-line"></div>
