part3 new button

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
       </div>
       <div class="part-three-image-container">
         <div>
-          <div class="part-three-image1"></div>
+          <div class="part-three-image1">
+            <div>NEW</div>
+          </div>
           <h3 class="lorem-comment">Lorem Ipsum is simply</h3>
           <button class="view-more-button">View more</button>
         </div>
