--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
         </div>
       </div>
     </main>
+    <footer class="main-footer">
+      <div class="change-button-list">
+        <div class="change-button-list__direction">&#60;</div>
+        <div class="change-button-list__item">1</div>
+        <div class="change-button-list__item">2</div>
+        <div class="change-button-list__item">3</div>
+        <div class="change-button-list__direction">&#62;</div>
+      </div>
+      <div class="to-top">&#94;</div>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
