part4 first version

--- a/index.html
+++ b/index.html
@@ -147,30 +147,28 @@
         <div class="part">PART 4</div>
         <div class="for-line"></div>
       </div>
-      <div class="part-four-image-container">
-        <div class="part-four-image1"></div>
-        <div class="part-four-contents">
-          <h2>It's not just coffee</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas neque
-            expedita quibusdam sapiente. Eius non, amet, fugiat labore, enim
-            facere tempora praesentium quasi similique nostrum ratione sapiente
-            officiis? Est, asperiores!Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Quas neque expedita quibusdam sapiente. Eius non,
-            amet, fugiat labore, enim facere tempora praesentium quasi similique
-            nostrum ratione sapiente officiis? Est, asperiores!Lorem ipsum dolor
-            sit amet, consectetur adipisicing elit. Quas neque expedita
-            quibusdam sapiente. Eius non, amet, fugiat labore, enim facere
-            tempora praesentium quasi similique nostrum ratione sapiente
-            officiis? Est, asperiores!Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Quas neque expedita quibusdam sapiente. Eius non,
-            amet, fugiat labore, enim facere tempora praesentium quasi similique
-            nostrum ratione sapiente officiis? Est, asperiores!
-          </p>
-          <button class="learn-button">LEARN MORE</button>
+    </main>
+    <div class="part-four-container">
+      <div class="part-four-main">
+        <h1>It's not just coffee 01</h1>
+        <div class="part-four-main__image"></div>
+        <h3>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
+          maiores ut ipsa similique. Dolores, distinctio dolor quisquam esse
+          harum vel ex cum! Quia, sequi fugiat commodi quae dolor sit ea?
+        </h3>
+      </div>
+      <div class="part-four-sub">
+        <div class="part-four-sub__one">
+          <div class="part-four-sub__one__image"></div>
+          <h3>It's not just coffee 02</h3>
+        </div>
+        <div class="part-four-sub__two">
+          <div class="part-four-sub__two__image"></div>
+          <h3>It's not just coffee 02</h3>
         </div>
       </div>
-    </main>
+    </div>
     <footer class="main-footer">
       <div class="change-button-list">
         <div class="change-button-list__direction">&#60;</div>
