--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hamberger-item"></div>
       </div>
     </header>
-    <main class="main-contents">
+    <main class="main-contents" id="main-contents">
       <div class="image-container">
         <div class="division-60">
           <div class="division-60-contents">
@@ -165,19 +165,19 @@
         </div>
         <div class="part-four-sub__two">
           <div class="part-four-sub__two__image"></div>
-          <h3>It's not just coffee 02</h3>
+          <h3>It's not just coffee 03</h3>
         </div>
       </div>
     </div>
     <footer class="main-footer">
       <div class="change-button-list">
-        <div class="change-button-list__direction">&#60;</div>
+        <div class="change-button-list__direction left-button">&#60;</div>
         <div class="change-button-list__item">1</div>
         <div class="change-button-list__item">2</div>
         <div class="change-button-list__item">3</div>
-        <div class="change-button-list__direction">&#62;</div>
+        <div class="change-button-list__direction right-button">&#62;</div>
       </div>
-      <div class="to-top">&#94;</div>
+      <div class="to-top"><a href="#main-contents">&#8743;</a></div>
     </footer>
     <script src="./main.js"></script>
   </body>
