gray-cover at part line

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         </div>
       </div>
       <div class="part-container" id="part-one">
+        <div class="gray-cover"></div>
         <div class="for-line"></div>
         <div class="part">PART 1</div>
         <div class="for-line"></div>
@@ -100,6 +101,7 @@
         </div>
       </div>
       <div class="part-container" id="part-two">
+        <div class="gray-cover"></div>
         <div class="for-line"></div>
         <div class="part">PART 2</div>
         <div class="for-line"></div>
@@ -119,6 +121,7 @@
         </div>
       </div>
       <div class="part-container" id="part-three">
+        <div class="gray-cover"></div>
         <div class="for-line"></div>
         <div class="part">PART 3</div>
         <div class="for-line"></div>
@@ -129,20 +132,21 @@
             <div>NEW</div>
           </div>
           <h3 class="lorem-comment">Lorem Ipsum is simply</h3>
-          <button class="view-more-button">View more</button>
+          <button class="view-more-button view-more-button-2">View more</button>
         </div>
         <div>
           <div class="part-three-image2"></div>
           <h3 class="lorem-comment">Lorem Ipsum is simply</h3>
-          <button class="view-more-button">View more</button>
+          <button class="view-more-button view-more-button-2">View more</button>
         </div>
         <div>
           <div class="part-three-image3"></div>
           <h3 class="lorem-comment">Lorem Ipsum is simply</h3>
-          <button class="view-more-button">View more</button>
+          <button class="view-more-button view-more-button-2">View more</button>
         </div>
       </div>
       <div class="part-container" id="part-four">
+        <div class="gray-cover"></div>
         <div class="for-line"></div>
         <div class="part">PART 4</div>
         <div class="for-line"></div>
